# SPEED

./: .gitignore  README.md  SPEED_Protocol_doc.md
docs/: README.md  SPEED_Protocol_doc.md
speed-cpp/: CMakeLists.txt  anirudh  main.cpp  main2.cpp
speed-cpp/include/: AccessRegistry.hpp  BinaryManager.hpp  BinaryMessage.hpp  Constants.hpp  EncryptionManager.hpp  KeyManager.hpp  MessageUtils.hpp  SPEED.hpp  Utils.hpp
speed-cpp/src/: AccessRegistry.cpp  BinaryManager.cpp  EncryptionManager.cpp  KeyManager.cpp  MessageUtils.cpp  SPEED.cpp  Utils.cpp
speed-cpp/tests/: AccessRegistry_Test.cpp  BinaryManager_Test.cpp  concurrentTest.cpp  per_sender_fifo_mock_Test.cpp  proc_1  proc_1.cpp  proc_2  proc_2.cpp  proc_3  proc_3.cpp
